test/output/err/std_compile_vector_it_const_err.cpp.err
src/vector/it_const_err.cpp:12:23: error: no viable conversion from '__normal_iterator<std::vector<int, std::allocator<int> >::const_pointer, [...]>' to '__normal_iterator<std::vector<int, std::allocator<int> >::pointer, [...]>'
        typename V::iterator it = vct.begin(); // <-- error expected
                             ^    ~~~~~~~~~~~
src/vector/it_const_err.cpp:21:2: note: in instantiation of function template specialization 'test<std::vector<int, std::allocator<int> > >' requested here
        test<NAMESPACE::vector<int> >();        
        ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/stl_iterator.h:784:11: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from 'std::vector<int, std::allocator<int> >::const_iterator' (aka '__normal_iterator<const int *, std::vector<int, std::allocator<int> > >') to 'const __gnu_cxx::__normal_iterator<int *, std::vector<int, std::allocator<int> > > &' for 1st argument
    class __normal_iterator
          ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/stl_iterator.h:808:9: note: candidate template ignored: substitution failure [with _Iter = const int *]: no type named '__type' in '__gnu_cxx::__enable_if<false, std::vector<int, std::allocator<int> > >'
        __normal_iterator(const __normal_iterator<_Iter,
        ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/stl_iterator.h:803:7: note: explicit constructor is not a candidate
      __normal_iterator(const _Iterator& __i) _GLIBCXX_NOEXCEPT
      ^
1 error generated.
